<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
			xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.mtrevisan</groupId>
	<artifactId>boxon</artifactId>
	<version>2.1.0-SNAPSHOT</version>

	<packaging>jar</packaging>

	<name>Boxon</name>
	<description>Library for declarative, bit-level, parsing of a message</description>
	<url>https://github.com/mtrevisan/Boxon</url>
<!--	<logo>https://upload.wikimedia.org/wikipedia/commons/1/1d/Symmetricwave2.png</logo>-->

	<developers>
		<developer>
			<name>Mauro Trevisan</name>
			<url>https://github.com/mtrevisan/</url>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:mtrevisan/Boxon.git</connection>
		<developerConnection>scm:git:ssh://github.com:mtrevisan/Boxon.git</developerConnection>
		<url>https://github.com/mtrevisan/Boxon</url>
	</scm>

	<issueManagement>
		<url>https://github.com/mtrevisan/boxon/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<java.version>1.11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<javadoc.html.version>-html5</javadoc.html.version>

		<!-- Profiles & Build -->
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.sonatype.plugins/nexus-staging-maven-plugin -->
		<sonatype.nexus-staging-maven-plugin.version>1.6.8</sonatype.nexus-staging-maven-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
		<maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-help-plugin -->
		<maven-help-plugin.version>3.2.0</maven-help-plugin.version>
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
		<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>

		<!-- ClassGraph -->
		<!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
		<github.classgraph.version>4.8.137</github.classgraph.version>

		<!-- Spring Expression -->
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-expression -->
		<springframework.spring-expression.version>5.3.13</springframework.spring-expression.version>

		<!-- FreeMarker -->
		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
		<freemarker.freemarker.version>2.3.31</freemarker.freemarker.version>

		<!-- Logging -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<slf4j.slf4j-api.version>1.7.32</slf4j.slf4j-api.version>
		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<logback.logback-classic.version>1.2.7</logback.logback-classic.version>

		<!-- JUnit -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<junit.junit-jupiter-engine.version>5.8.2</junit.junit-jupiter-engine.version>
		<!-- Apache -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<apache.commons-lang3.version>3.12.0</apache.commons-lang3.version>
		<!-- Jackson -->
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<jackson.jackson-databind.version>2.13.0</jackson.jackson-databind.version>
	</properties>

	<repositories>
		<repository>
			<id>java-net-repo</id>
			<url>https://maven.java.net/content/repositories/public/</url>
		</repository>
		<repository>
			<id>java-apache-repo</id>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
		<repository>
			<id>java-spring-repo</id>
			<url>https://repo.spring.io/ui/native/release/</url>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>stage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<!-- Deploy -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>${maven-deploy-plugin.version}</version>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<!-- mvn clean deploy -U -Dmaven.test.skip=true -->
			<!-- mvn clean deploy -Pdeploy -->
			<!-- https://stackoverflow.com/questions/41265266/how-to-solve-inaccessibleobjectexception-unable-to-make-member-accessible-m/41265267#41265267 -->
			<id>release</id>
			<properties>
				<gpg.executable>gpg</gpg.executable>
			</properties>
			<build>
				<plugins>
					<!-- Signing JAR Files -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${maven-gpg-plugin.version}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- Nexus Staging Plugin -->
					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>${sonatype.nexus-staging-maven-plugin.version}</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<!-- The Base URL of Nexus instance where we want to stage -->
							<serverId>sonatype-nexus-staging</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
						<dependencies>
							<!--
							  TODO:
								 Remove after OSSRH-66257, NEXUS-26993 are fixed,
								 possibly via https://github.com/sonatype/nexus-maven-plugins/pull/91
							-->
							<dependency>
								<groupId>com.thoughtworks.xstream</groupId>
								<artifactId>xstream</artifactId>
								<version>1.4.18</version>
							</dependency>
						</dependencies>
					</plugin>
					<!-- Source -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>${maven-source-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- JavaDoc -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${maven-javadoc-plugin.version}</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
								<configuration>
									<additionalOptions>${javadoc.html.version}</additionalOptions>
									<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
									<detectJavaApiLink>false</detectJavaApiLink>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>

			<distributionManagement>
				<snapshotRepository>
					<id>sonatype-nexus-snapshots</id>
					<name>Sonatype Nexus Snapshots</name>
					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
					<uniqueVersion>true</uniqueVersion>
				</snapshotRepository>
				<repository>
					<id>sonatype-nexus-staging</id>
					<name>Nexus Release Repository</name>
					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
					<uniqueVersion>false</uniqueVersion>
				</repository>
			</distributionManagement>
		</profile>
	</profiles>

	<build>
		<plugins>
			<!-- Surefire -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.annotations.checksummers=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.annotations.converters=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.annotations.validators=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.codecs=spring.expression,ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.codecs.managers.matchers=ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.codecs.queclink=spring.core,spring.expression,ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.core=spring.core,ALL-UNNAMED
						--add-opens io.github.mtrevisan.boxon/io.github.mtrevisan.boxon.external.semanticversioning=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<!-- Compiler -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.source}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<!-- Help -->
			<!-- display active profile in compile phase -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-help-plugin</artifactId>
				<version>${maven-help-plugin.version}</version>
				<executions>
					<execution>
						<id>show-profiles</id>
						<phase>compile</phase>
						<goals>
							<goal>active-profiles</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Templating -->
			<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/templating-maven-plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>templating-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>generate-version-class</id>
						<goals>
							<goal>filter-sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Shade -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<!-- Run shade goal on package phase -->
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>shaded</shadedClassifierName>
							<filters>
								<!-- FIXME: strengthen the inclusions -->
								<!-- ClassNotFoundException: ch.qos.logback.classic.boolex.OnMarkerEvaluator-->
								<filter>
									<artifact>ch.qos.logback:logback-classic</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
							</filters>
							<transformers>
								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<X-Compile-Source-JDK>${maven.compiler.source}</X-Compile-Source-JDK>
										<X-Compile-Target-JDK>${maven.compiler.target}</X-Compile-Target-JDK>
										<Built-By>Mauro Trevisan</Built-By>
										<Build-Jdk>${java.version} (${java.vendor} ${java.vm.version})</Build-Jdk>
										<Build-OS>${os.name} ${os.arch} ${os.version}</Build-OS>
									</manifestEntries>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- ClassGraph -->
		<dependency>
			<groupId>io.github.classgraph</groupId>
			<artifactId>classgraph</artifactId>
			<version>${github.classgraph.version}</version>
		</dependency>

		<!-- SpEL -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-expression</artifactId>
			<version>${springframework.spring-expression.version}</version>
		</dependency>

		<!-- FreeMarker -->
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>${freemarker.freemarker.version}</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.slf4j-api.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.logback-classic.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.junit-jupiter-engine.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Apache -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${apache.commons-lang3.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.jackson-databind.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
</project>
